Add device list widget
Reference:
https://github.com/thingsboard/dart_thingsboard_client/blob/master/lib/src/service/device_service.dart

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,8 +2,17 @@
     "welcomeHomePage": "Welcome to Demo Homepage!",
     "homeAppBarTitle": "Demo HomePage",
     "loginAppBarTitle": "Login",
+    "deviceAppBarTitle": "Device list",
     "drawerHome": "­Home",
     "drawerDevice": "Device",
     "drawerDashboard": "Dashboard",
-    "drawerLogout": "Logout"
+    "drawerLogout": "Logout",
+
+    "deviceDetails" : "Show details",
+    "deviceName": "Name",
+    "deviceId": "Id",
+    "deviceCreateTime": "Create time",
+    "deviceLabel": "Label",
+    "deviceFirmwareId": "Assigned firmware ID",
+    "deviceSoftwareId": "Assigned software ID"
 }
