Add device details page
Reference:
https://github.com/thingsboard/dart_thingsboard_client/blob/master/example/websocket_api.dart
https://github.com/thingsboard/dart_thingsboard_client/blob/master/lib/src/model/query/query_models.dart

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -13,6 +13,8 @@
     "deviceId": "Id",
     "deviceCreateTime": "Create time",
     "deviceLabel": "Label",
+    "deviceProfileName": "Device Profile",
     "deviceFirmwareId": "Assigned firmware ID",
-    "deviceSoftwareId": "Assigned software ID"
+    "deviceSoftwareId": "Assigned software ID",
+    "deviceAlertDialogConfirm": "Ok"
 }
