Add navigator2 routerdelegate for pages
Upgrade packages & fix the error message is not correct
after inputed username & password

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,7 +3,7 @@
     "homeAppBarTitle": "Demo HomePage",
     "loginAppBarTitle": "Login",
     "deviceAppBarTitle": "Device list",
-    "drawerHome": "­Home",
+    "drawerHome": "Home",
     "drawerDevice": "Device",
     "drawerDashboard": "Dashboard",
     "drawerLogout": "Logout",
