--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -1,4 +1,5 @@
 {
+    "loadingText": "載入中",
     "welcomeHomePage": "歡迎來到首頁, 請登入以繼續!",
     "homeAppBarTitle": "歡迎來到首頁！",
     "loginAppBarTitle": "登入",
