Add preferences page and select language function
Install Package:
$ flutter pub add restart_app

Refer to :
https://github.com/DeveloperLibs/flutter_localization
https://github.com/JohannesMilke/localization_arb_example
https://github.com/Daniel-Ioannou/flutter_country_picker/blob/master/lib/src/utils.dart

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -17,6 +17,7 @@
     "drawerDevice": "Device",
     "drawerDashboard": "Dashboard",
     "drawerLogout": "Logout",
+    "drawerPreferences": "Preferences",
     "alertDialogConfirm": "Ok",
     "usersFloatActionViewModule": "Change view module",
     "usersFloatActionAddUser": "Add new account",
@@ -32,5 +33,6 @@
     "usersDataTableHeaderAuthority": "Authority",
     "usersDataTableSearchbyName": "Search by name",
     "usersDataTableSearchbyEmail": "Search by SW email",
-    "usersDataTableSearchbyAuthority": "Search by Authority"
+    "usersDataTableSearchbyAuthority": "Search by Authority",
+    "preferencesSelectLanguage": "Select Language :"
 }
